making it responsive

--- a/cost.html
+++ b/cost.html
@@ -38,7 +38,7 @@
                 ><i class="fa-solid fa-circle-user text-accent"></i
               ></a>
             </li>
-            <li><h3 class="text-accent">Jaya</h3></li>
+            <li><h3 class="text-accent user">Jaya</h3></li>
           </ul>
         </div>
       </div>
@@ -96,7 +96,7 @@
               <!-- budget feedback -->
               <div class="budget-feedback capitalized"></div>
               <form class="budget-form" id="budget-form">
-                <h1 class="capitalized text-accent fs-400 padding-buttom">please enter your budget title</h1>
+                <h1 class="capitalized text-accent fs-400 padding-buttom">please enter your budget amount</h1>
                 <div class="form-group">
                   <input id="budget-input"  type="number" class="budget-input form-control">
                 </div>
