--- a/labour.html
+++ b/labour.html
@@ -49,37 +49,35 @@
         <div class="aside-container">
           <ul>
             <li>
-              <i class="fa-solid fa-clapperboard text-orange"></i
-              ><span class="text-accent">Dashboard</span>
+              <a href="#"><i class="fa-solid fa-clipboard text-orange"></i><span class="text-accent capitalized">Dashboard</span></a>
             </li>
             <li>
-              <i class="fa-solid fa-clapperboard text-orange"></i
-              ><span class="text-accent">budget tracker</span>
+              <a href="cost.html"><i class="fa-solid fa-rectangle-list text-orange"></i
+                ><span class="text-accent capitalized">budget tracker</span></a>
             </li>
             <li>
-              <i class="fa-solid fa-clapperboard text-orange"></i
-              ><span class="text-accent">Labour</span>
+              <a href="/labour.html"><i class="fa-solid fa-id-card text-orange"></i
+                ><span class="text-accent capitalized text-orange">Hours Tracker</span></a>
             </li>
             <li>
-              <i class="fa-solid fa-clapperboard text-orange"></i
-              ><span class="text-accent">Communication</span>
+              <a href="#"><i class="fa-solid fa-comments text-orange"></i
+                ><span class="text-accent capitalized">communication</span></a>
             </li>
             <li>
-              <i class="fa-solid fa-clapperboard text-orange"></i
-              ><span class="text-accent">Quotes</span>
+              <a href="#"><i class="fa-solid fa-file-lines text-orange"></i
+                ><span class="text-accent capitalized">quotes</span></a>
             </li>
             <li>
-              <i class="fa-solid fa-clapperboard text-orange"></i
-              ><span class="text-accent">Estimate</span>
+              <a href="#"><i class="fa-solid fa-clapperboard text-orange"></i
+                ><span class="text-accent capitalized">estimates</span></a>
             </li>
             <li>
-              <i class="fa-solid fa-clapperboard text-orange"></i
-              ><span class="text-accent">Client</span>
+              <a href="#"><i class="fa-solid fa-user-tie text-orange"></i
+                ><span class="text-accent capitalized">client</span></a>
             </li>
             <li>
-              <i class="fa-solid fa-clapperboard text-orange"></i
-              ><span class="text-accent">Report</span>
-            </li>
+              <a href="#"><i class="fa-solid fa-file text-orange"></i
+                ><span class="text-accent capitalized">report</span></a>
           </ul>
         </div>
       </aside>
